Welcome message. Theme description and screenshot changed.

--- a/metadata.desktop
+++ b/metadata.desktop
@@ -1,13 +1,13 @@
 [SddmGreeterTheme]
 Name=Urban LifeStyle
-Description=Urban LifeStyle Theme
+Description=Urban LifeStyle Theme: A simple and colorful theme.
 Author=Alfredo Ramos
 Copyright=(c) 2015, Alfredo Ramos
 License=GPLv3
 Type=sddm-theme
 Version=0.1
 Website=https://github.com/AlfredoRamos/sddm-urbanlifestyle-theme
-Screenshot=screenshot.png
+Screenshot=urbanlifestyle.png
 MainScript=Main.qml
 ConfigFile=theme.conf
 TranslationsDirectory=translations
