Clear password field if login fails.

--- a/urbanlifestyle/metadata.desktop
+++ b/urbanlifestyle/metadata.desktop
@@ -2,15 +2,15 @@
 Name=Urban LifeStyle
 Description=Urban LifeStyle Theme: A simple and colorful theme.
 Author=Alfredo Ramos
-Copyright=(c) 2015, Alfredo Ramos
-License=GPLv3
+Copyright=(c) 2015 Alfredo Ramos
+License=GPL-3.0+
 Type=sddm-theme
-Version=0.1
+Version=0.1.4
 Website=https://github.com/AlfredoRamos/sddm-urbanlifestyle-theme
-Screenshot=urbanlifestyle.png
+Screenshot=resources/images/urbanlifestyle.jpg
 MainScript=Main.qml
 ConfigFile=theme.conf
 TranslationsDirectory=translations
 Email=alfredo.ramos@yandex.com
 Theme-Id=urbanlifestyle
-Theme-API=2.0
+Theme-API=2.3
