Show avatar image

--- a/urbanlifestyle/theme.conf
+++ b/urbanlifestyle/theme.conf
@@ -1,2 +1,4 @@
 [General]
 background=resources/images/background.jpg
+angleDown=resources/images/angle-down.png
+avatarSource="/usr/share/sddm/faces/%1.face.icon"
