--- a/urbanlifestyle/metadata.desktop
+++ b/urbanlifestyle/metadata.desktop
@@ -1,11 +1,11 @@
 [SddmGreeterTheme]
 Name=Urban LifeStyle
-Description=Urban LifeStyle Theme: A simple and colorful theme.
+Description=Urban LifeStyle: A simple and colorful theme.
 Author=Alfredo Ramos
 Copyright=(c) 2015 Alfredo Ramos
 License=GPL-3.0+
 Type=sddm-theme
-Version=0.1.4
+Version=0.1.5
 Website=https://github.com/AlfredoRamos/sddm-urbanlifestyle-theme
 Screenshot=resources/images/urbanlifestyle.jpg
 MainScript=Main.qml
