Look for the avatar image in the $HOME directory

--- a/urbanlifestyle/theme.conf
+++ b/urbanlifestyle/theme.conf
@@ -1,4 +1,5 @@
 [General]
 background=resources/images/background.jpg
 angleDown=resources/images/angle-down.png
-avatarSource="/usr/share/sddm/faces/%1.face.icon"
+avatarHomeSource="/home/%1/.face.icon"
+avatarSystemSource="/usr/share/sddm/faces/%1.face.icon"
