Use SDDM's default faces directory

--- a/urbanlifestyle/theme.conf
+++ b/urbanlifestyle/theme.conf
@@ -1,5 +1,4 @@
 [General]
 background=resources/images/background.jpg
 angleDown=resources/images/angle-down.png
-avatarHomeSource="/home/%1/.face.icon"
-avatarSystemSource="/usr/share/sddm/faces/%1.face.icon"
+avatarSource="/usr/share/sddm/faces/%1.face.icon"
