Use a custom clock
- Create a custom clock to allow the user to change time and date format
- Update preview image
- Update README.md

--- a/urbanlifestyle/theme.conf
+++ b/urbanlifestyle/theme.conf
@@ -2,3 +2,5 @@
 background=images/background.jpg
 angleDown=images/angle-down.png
 avatarSource="/usr/share/sddm/faces/%1.face.icon"
+timeFormat="hh:mm:ss ap"
+dateFormat="dddd, MMMM d, yyyy"
