Allow to change more settings in theme.conf
- Add background color (issue #1)
- Add text color
- Add time and date font size

--- a/urbanlifestyle/theme.conf
+++ b/urbanlifestyle/theme.conf
@@ -1,6 +1,10 @@
 [General]
-background=images/background.jpg
+backgroundImage=images/background.jpg
+backgroundColor="#fff"
+textColor="#555"
 angleDown=images/angle-down.png
 avatarSource="/usr/share/sddm/faces/%1.face.icon"
 timeFormat="hh:mm:ss ap"
 dateFormat="dddd, MMMM d, yyyy"
+timeFontSize=25	# In pixels
+dateFontSize=13	# In pixels
