Use GridLayout to show the login form
Hopefully this will make it easy to maintain

--- a/urbanlifestyle/theme.conf
+++ b/urbanlifestyle/theme.conf
@@ -1,6 +1,7 @@
 [General]
 background=images/background.jpg
 backgroundColor="#fff"
+avatar="%1%2.face.icon"
 angleDown=images/angle-down.png
 timeFormat="hh:mm:ss ap"
 dateFormat="dddd, MMMM d, yyyy"
