Vectorize drop down image

--- a/theme.conf
+++ b/theme.conf
@@ -2,7 +2,7 @@
 background=images/background.jpg
 backgroundColor="#fff"
 avatar="%1%2.face.icon"
-angleDown=images/angle-down.png
+angleDown=images/angle-down.svg
 timeFormat="hh:mm:ss ap"
 dateFormat="dddd, MMMM d, yyyy"
 timeFontSize=25	# In pixels
