Update license identifier
GPL-3.0+ has been deprecated in favor of GPL-3.0-or-later

https://spdx.org/licenses/GPL-3.0+.html
https://spdx.org/licenses/GPL-3.0-or-later.html

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: cpp
 sudo: required
 
+services:
+  - docker
+
 branches:
   only:
     - master
@@ -9,7 +12,7 @@ arch:
   packages:
     - qt5-declarative
   script:
-    - travis/run-tests.sh
+    - travis/run.sh
 
 script:
-  - "curl -s https://raw.githubusercontent.com/mikkeloscar/arch-travis/master/arch-travis.sh | bash"
+  - curl -s https://raw.githubusercontent.com/mikkeloscar/arch-travis/master/arch-travis.sh | bash
