--- a/metadata.desktop
+++ b/metadata.desktop
@@ -3,7 +3,7 @@ Name=Urban LifeStyle
 Description=Urban LifeStyle: A simple and colorful theme.
 Author=Alfredo Ramos
 Copyright=(c) 2015 Alfredo Ramos
-License=GPL-3.0+
+License=GPL-3.0-or-later
 Type=sddm-theme
 Version=0.4.2
 Website=https://github.com/AlfredoRamos/urbanlifestyle-sddm-theme
