--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto
 travis/ export-ignore
+.github/ export-ignore
 .travis.yml export-ignore
 .gitignore export-ignore
 .gitattributes export-ignore
