--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,16 @@ on:
       - reopened
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
         uses: actions/checkout@master
 
       - name: Install dependencies
-        run: sudo apt -y install qt5-default qtdeclarative5-dev qtdeclarative5-dev-tools
+        run: |
+          sudo apt update
+          sudo apt -y install qt5-default qtdeclarative5-dev qtdeclarative5-dev-tools
 
       - name: Test QML
         run: |
