--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,12 @@ name: CI
 on:
   push:
     branches: [master]
-  pull_request:
+  pull_request: {}
 
 jobs:
   lint:
+    if: ${{ !contains(github.event.head_commit.message, 'skip lint') }}
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
