--- a/metadata.desktop
+++ b/metadata.desktop
@@ -11,6 +11,6 @@ Screenshot=images/urbanlifestyle.jpg
 MainScript=Main.qml
 ConfigFile=theme.conf
 TranslationsDirectory=translations
-Email=alfredo.ramos@protonmail.com
+Email=alfredo.ramos@skiff.com
 Theme-Id=urbanlifestyle
 Theme-API=2.6
